gobmkida/g1/aftermath_genmove
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/aftermath_genmove/src/engine/aftermath.c:892:7: error: use of undeclared identifier 'dword_760CDC'
v30 = dword_760CDC[k]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/aftermath_genmove/src/engine/aftermath.c:936:4: error: use of undeclared identifier 'byte_A07ABF'
|| byte_A07ABF[m] != 3 && !score[m + 399] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/aftermath_genmove/src/obj/1/aftermath.o] Error 1
